Radio Button : fix the image path and sample (#631)
[Issue] N/A
[Problem]Radio button is not visible.
[Solution]Change the image path

--- a/src/css/profile/mobile/common/radio.less
+++ b/src/css/profile/mobile/common/radio.less
@@ -18,7 +18,7 @@ input[type="radio"].ui-radio {
 		height: 100%;
 		opacity: 0.8;
 		background-color: var(--control-inactive-color);
-		mask-image: url("images/3_Controllers/Checkbox/sem_btn_radio_to_on_mtrl_000.svg"); 
+		mask-image: url("images/3_Controllers/Radio/sem_btn_radio_to_on_mtrl_000.svg"); 
 		mask-size: 100%, 0;
 		mask-position: center;
 		mask-repeat: no-repeat;
@@ -30,7 +30,7 @@ input[type="radio"].ui-radio {
 		width: 100%;
 		box-sizing: content-box;
 		background-color: var(--control-active-color);
-		mask-image: url("images/3_Controllers/Checkbox/sem_btn_radio_to_on_mtrl_026.svg");
+		mask-image: url("images/3_Controllers/Radio/sem_btn_radio_to_on_mtrl_026.svg");
 		mask-size: 100%;
 		mask-position: center;
 	}
